# mozlz4

./: Cargo.toml  README.md
src/: lib.rs
